JS added to test

--- a/static/index.html
+++ b/static/index.html
@@ -29,9 +29,10 @@
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<div>
-			<h1 class="jumbotron">Michael Bernstein</h1>
+		<div class="jumbotron">
+			<h1>Michael Bernstein</h1>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<button id="test-javascript" type="button" class="btn btn-primary">Test Javascript</button>
 		</div>
 
 
